Add “&nbsp;” before “:”

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <h2>Chantiers futurs</h2>
 
-    <p>Nous précisons que la commission a choisit de se concentrer dans un premier temps sur l'éco-conception des produits numériques (que nous sommes amenés a développer pour nos clients) qui est un sujet parmi d'autres regroupés sous la bannière du <b>numérique responsable</b>. Nous n'oublions donc pas les volets suivants qui, pour nous, restent indiscociables des bonnes pratiques écologiques : </p>
+    <p>Nous précisons que la commission a choisit de se concentrer dans un premier temps sur l'éco-conception des produits numériques (que nous sommes amenés a développer pour nos clients) qui est un sujet parmi d'autres regroupés sous la bannière du <b>numérique responsable</b>. Nous n'oublions donc pas les volets suivants qui, pour nous, restent indiscociables des bonnes pratiques écologiques&nbsp;: </p>
     <ul>
         <li>🙆🏽‍♀️ Accessibilité</li>
         <li>👩🏽 Inclusivité</li>
@@ -57,7 +57,7 @@
         <h3 id="front">🖼️ Dev front</h3>
        <ul>
             <li>Compresser les images au format Webp</li> 
-            <li>Minifier et optimiser les svg. Outils : <a href="https://compressor.io/">Compressor.io</a>, <a href="https://www.svgminify.com/">SVG minify</a>, <a href="https://github.com/svg/svgo">SVGO</a> </li>
+            <li>Minifier et optimiser les svg. Outils&nbsp;: <a href="https://compressor.io/">Compressor.io</a>, <a href="https://www.svgminify.com/">SVG minify</a>, <a href="https://github.com/svg/svgo">SVGO</a> </li>
             <li>Fournir une CSS pour l'impression</li>
             <li>Eviter les animations CSS/Javascript coûteuses</li>
            <li>Utiliser le lazy loading</li>
